--- a/package.json
+++ b/package.json
@@ -2,5 +2,15 @@
   "name": "prettier-eslint_d",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "bin": {
+    "prettier-eslint_d": "bin/prettier-eslint_d.js"
+  },
+  "devDependencies": {},
+  "dependencies": {
+    "dargs": "^5.1.0",
+    "eslint_d": "^5.3.1",
+    "prettier_d": "^5.7.4",
+    "rminimist": "^1.0.1"
+  }
 }
